调整项目结构，加入前端

--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -3,10 +3,10 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.nexas.dx</groupId>
-    <artifactId>editor</artifactId>
+    <artifactId>backend</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>editor</name>
-    <description>editor</description>
+    <name>backend</name>
+    <description>backend</description>
     <properties>
         <java.version>11</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -60,7 +60,7 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <version>${spring-boot.version}</version>
                 <configuration>
-                    <mainClass>com.nexas.dx.editor.EditorApplication</mainClass>
+                    <mainClass>com.nexas.dx.backend.EditorApplication</mainClass>
                     <skip>true</skip>
                 </configuration>
                 <executions>
