--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -87,6 +87,13 @@
                     </execution>
                 </executions>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <argLine>-Xms32m -Xmx2048m</argLine>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 
